--- a/journal/201901.md
+++ b/journal/201901.md
@@ -1,7 +1,7 @@
 
 # صحيفة الديكريد لشهر يناير2019 
 
-![abstract art](journal-201901-384.jpg)
+![abstract art](decred-journal-ar/img/journal-201901-384.jpg)
 
 شهد الديكريد بداية سنة 2019 إصدارات كبيرة للبرمجيات وايضاً تطورات هامة في أجزاء أخرى من المشروع. 
 
