--- a/journal/201902.md
+++ b/journal/201902.md
@@ -1,7 +1,7 @@
 
 # صحيفة الديكريد لشهر فبراير 2019
  
- ![abstract art](https://github.com/Insaf01/decred-journal-ar/blob/master/img/journal-201902.png)
+ ![abstract art](../img/journal-201902.png)
  
 عيد ميلاد سعيد، ديكريد! مرت ثلاث سنوات منذ تعدين [الكتلة الأولى](https://explorer.dcrdata.org/block/1) في 8 فبراير 2016. 
 
@@ -13,7 +13,7 @@
 
 ## التطوير
 
-[dcrd](https://github.com/decred/dcrd): تم تشديد سياسة الميمبول من خلال السماح بإنفاق تذكرة [واحدة](https://github.com/decred/dcrd/pull/1596) مزدوجة و[رفض](https://github.com/decred/dcrd/pull/1596) نفس الإنفاق المزدوج للكتلة. كما تمت [إزالة](https://github.com/decred/dcrd/pull/1607)المحافظ الخاصة من dcrd و [نقلت](https://github.com/decred/dcrwallet/pull/1394 إلى dcrwallet حيث تنتمي، قامت هذه العملية بتبسيط التغييرات في dcrwallet  كما أدت إلى إعادة [تغيير تصميم](https://github.com/decred/dcrd/pull/1613) البرنامج في dcrd لتوفير حدود أقوى للوحدة وتبسيط إعتماد الرسم البياني (لاحظ كيف يهتم طلب السحب بالمراجعين). [أزيلت](https://github.com/decred/dcrd/pull/1599) وحدات الاستبدال غير الجذرية ل GO – وهذا  يساعد على ضمان اختبار أحدث رمز من جميع الوحدات، و إبقائها دقيقة بشكل مستقل للمستهلكين الخارجيين.
+[dcrd](https://github.com/decred/dcrd): تم تشديد سياسة الميمبول من خلال السماح بإنفاق تذكرة [واحدة](https://github.com/decred/dcrd/pull/1596) مزدوجة و[رفض](https://github.com/decred/dcrd/pull/1596) نفس الإنفاق المزدوج للكتلة. كما تمت [إزالة](https://github.com/decred/dcrd/pull/1607) المحافظ  الخاصة  من dcrd و [تم نقلها](https://github.com/decred/dcrwallet/pull/1394) إلى dcrwallet حيث تنتمي، قامت هذه العملية بتبسيط التغييرات في dcrwallet  كما أدت إلى إعادة [تغيير تصميم](https://github.com/decred/dcrd/pull/1613) البرنامج في dcrd لتوفير حدود أقوى للوحدة وتبسيط إعتماد الرسم البياني (لاحظ كيف يهتم طلب السحب بالمراجعين). [أزيلت](https://github.com/decred/dcrd/pull/1599) وحدات الاستبدال غير الجذرية ل GO – وهذا  يساعد على ضمان اختبار أحدث رمز من جميع الوحدات، و إبقائها دقيقة بشكل مستقل للمستهلكين الخارجيين.
 
 [dcrwallet](https://github.com/decred/dcrwallet): تم [حذف](https://github.com/decred/dcrwallet/pull/1396) النسخة 1 ل ticketbuyer بعد أن تم إهمالها لعدة إصدارات. 
 
@@ -47,7 +47,7 @@
 
 [decred.org](https://github.com/decred/dcrweb): تم تحديث المحتوى والترجمات. كما [بدأ](https://github.com/decred/dcrweb/issues/561) تنفيذ صفحة الأخبار والمواقع.
 
-النتائج الأولية لبرنامج [مكافأة إيجاد العلة]((https://bounty.decred.org/): اعتبارًا من 3 مارس، تم تقديم ما مجموعه 27 تقريرًا، تشمل 2 منها على نقاط ضعف أهلت أصحابها للحصول على تعويضات (72 دولارًا و 90 دولارًا). 
+النتائج الأولية لبرنامج [مكافأة إيجاد العلة](https://bounty.decred.org/): اعتبارًا من 3 مارس، تم تقديم ما مجموعه 27 تقريرًا، تشمل 2 منها على نقاط ضعف أهلت أصحابها للحصول على تعويضات (72 دولارًا و 90 دولارًا). 
 
 مسائل أخرى:
 
@@ -91,7 +91,7 @@
 * تلقت [منصة التبادل اللامركزية RFP](https://proposals.decred.org/proposals/5431da8ff4eda8cdbf8f4f2e08566ffa573464b97ef6d6bae78e749f27800d3a) لjy-p@  إثنان و تمانون تعليقا على بوليتيا، [11 تعليقا](https://www.reddit.com/r/decred/comments/ancxgx/rfp_decred_decentralized_exchange_infrastructure/) على الريديت، وتنقيحان قللا من نطاق برنامج MVP وحدد سقف التكلفة بمبلغ 250 ألف دولار (أقل مليون دولار). نشر bee@ [تحليلا](https://github.com/xaur/decred-proposals/blob/master/decred-dex-rfp-analysis.md) شخصيا للإيجابيات والسلبيات. وحفز الاقتراح أيضا على [مناقشة](https://www.reddit.com/r/DCR/comments/awbtbr/should_treasury_funded_marketing_resources_be/) ما إذا كان ينبغي للخزانة أن تمول الترويج لمقترحات من هذا القبيل. بدأ التصويت بـ 91.4٪ نعم من أصل 8 آلاف صوت اعتبارًا من 9 مارس.
 * تم نشر [البرامج التعليمية للمحفظة](https://proposals.decred.org/proposals/a3def199af812b796887f4eae22e11e45f112b50c2e17252c60ed190933ec14f) من قبل Denni Lovejoy من Cryptocurrency Market بعد تكرارات متعددة وجمع التعليقات في [الدردشات](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154941035930084kFSjY:decred.org) و [الريديت](https://www.reddit.com/r/decred/comments/anksg2/proposed_statement_of_work_sow_for_decred/). تمت الموافقة على ميزانية 750 دولار بنسبة تصويت بلغت %80 بنعم ومشاركةالتذاكر بنسبة %24.
 * تم تقديم مقترح [تمويل الفعاليات لعام 2019](https://proposals.decred.org/proposals/d3e7f159b9680c059a3d4b398de2c8f6627108f28b7d61a3f10397acb4b5e509) بواسطة Dustorf@ بعد معاينات في [الدردشة](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$154896889724431Mxlvj:decred.org) و [الريديت](https://www.reddit.com/r/decred/comments/anhh8n/proposal_to_get_events_spending_approved_via/) و التي سبقت المقترح. التصويت انتهى بالموافقة على ميزانية 200 ألف دولار بنسبة أصوات بلغت %89 بنعم مع مشاركة %34 من تذاكر التصويت. 
-* مقترح [لدمج الديكريد بالصراف الآلي](https://proposals.decred.org/proposals/aea224a561cfed183f514a9ac700d68ba8a6c71dfbee71208fb9bff5fffab51d) لoregonisaac@ هو نتيجة عدة أسابيع من البحث والمسودات والتعليقات منذ مناقشة [اقتراح]https://proposals.decred.org/proposals/bb7e19283d5c65fed598d5a2f4afcc2b5d2eab187b9cb84fc4304430f80b5ad1) الصراف الآلي لBcash في نوفمبر 2018. ويقوم المقترح الحالي بالسؤال عن رأي أصحاب الحصص فيما إذا كان ينبغي المضي قدما في التخطيط. في حالة الموافقة، سيتم تقديم اقتراح آخر مع تفاصيل خاصة بالتنفيذ. لم يبدأ التصويت بعد.
+* مقترح [لدمج الديكريد بالصراف الآلي](https://proposals.decred.org/proposals/aea224a561cfed183f514a9ac700d68ba8a6c71dfbee71208fb9bff5fffab51d) لoregonisaac@ هو نتيجة عدة أسابيع من البحث والمسودات والتعليقات منذ مناقشة [اقتراح](https://proposals.decred.org/proposals/bb7e19283d5c65fed598d5a2f4afcc2b5d2eab187b9cb84fc4304430f80b5ad1) الصراف الآلي لBcash في نوفمبر 2018. ويقوم المقترح الحالي بالسؤال عن رأي أصحاب الحصص فيما إذا كان ينبغي المضي قدما في التخطيط. في حالة الموافقة، سيتم تقديم اقتراح آخر مع تفاصيل خاصة بالتنفيذ. لم يبدأ التصويت بعد.
 * يقترح [موقع المجتمع للديكريد](https://proposals.decred.org/proposals/fb8e6ca361c807168ea0bd6ddbfb7e05896b78f2576daf92f07315e6f8b5cd83) بواسطة karamble@ موقعا يجمع مصادر متعددة المحتوى للديكريد مثل المقالات وأشرطة الفيديو والبث الصوتي الرقمي وتقارير الفعاليات والتجار.  تم بناء النموذج الأولي بالفعل بواسطة  karamble@ ويسعى الاقتراح للحصول على 6 آلاف دولار لتمويل الموقع لمدة 6 أشهر. انتهى التصويت بنسبة موافقة %72.5 بنعم، مع تصويت  %33 من التذاكر المؤهلة.
 * تسعى acean  [لدمج الديكريد على منصة التبادل IDAX](https://proposals.decred.org/proposals/60adb9c0946482492889e85e9bce05c309665b3438dd85cb1a837df31fbf57fb) المتواجدة في منغوليا  للحصول على 1000 DCR لإضافة الزوج DCR/BTC للتبادل على منصتها. التصويت انتهى ورُفض الاقتراح بنسبة أصوات بلغت %25 بنعم، مع مشاركة %23.5 من تذاكر التصويت. 
 * عملية [إدماج الديكريد بمحفظة Trust Wallet](https://proposals.decred.org/proposals/2ababdea7da2b3d8312a773d477272135a883ed772ba99cdf31eddb5f261d571) لoregonisaac@ تقترح دمج الديكريد في محفظة Trust "اللامركزية بالكامل" مقابل حوالي 3300 دولار و 100 دولار كدعم شهري.  لم يبدأ التصويت بعد.
@@ -209,8 +209,8 @@
 * [كيفية الحفاظ على تشفير أمان عملاتك الرقمية](https://www.meetup.com/Decred-Australia/events/258211699/)، ملبورن، أستراليا.  ناقش عشاق العملة الرقمية في أستراليا أفضل الممارسات الأمنية ومعايير الأمان الخاصة بـالديكريد. و[أشار](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15504942691141LtOxa:decred.org) Zohand@:  "كانت ردود الفعل رائعة ، و يرغب الرفاق من coinstop و CTRL إدارة الفعالية مرة أخرى في غضون شهرين.". ([الصور](https://twitter.com/DecredAustralia/status/1097478053763018752))
 * [الديكريد في 30 دقيقة](https://www.eventbrite.com/e/decred-en-30-minutos-tickets-55764142050) في مكسيكو سيتي، المكسيك.  [ذكر](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15517155592047249xtYGy:matrix.org) elian@:  "كان أول لقاء حيث كان الجميع  على إطلاع عن الديكريد بشكل جيد جدا ، كنا 7 في المجموع. سار العرض التقديمي بشكل أسرع لأن الحاضرين عرفوا معظم المحتوى الأساسي مقدمًا، لذا ذهبنا لمناقشة قضايا أكثر تعقيدًا مثل التحديات التي تواجه الإدارة اللامركزية وأفضل طريقة لمشاركة التذاكر والتطورات المستقبلية التي تحدث في المشروع مثل الشبكة البرقية، إدماج المدفوعات وأحدث الفعاليات، والتسويق ومقترحات المجتمع في بوليتيا.  كان من اللطيف جدا أن أقابل متحمسي الـDCR  في المكسيك. (...) أعتقد أننا بعيدون عن رؤية العملات الرقمية كما MoE في المكسيك ولكن بالتأكيد الفضاء يتحرك بسرعة.  في الوقت الحالي، هناك عدد أكبر من المكسيكيين على اتصال بالعملات الرقمية أكثر مما هم على اتصال بأسواق الأسهم في البلاد، وهذا مؤشر جيد للغاية ". ([الصور](https://twitter.com/DecredESP/status/1102594478664232960))
 * محاضرة في جامعة UAEM في إكيتبيك، المكسيك. [شارك](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$1551994219193770GeoIk:matrix.org) elian@: "لقد تحدثت عن تاريخ المال، الإنترنت، بلوكشين البتكوين، والبلوكشين الهجين للديكريد وكيفية العمل في صناعات العملات الرقمية والبلوكشين.   كان الجميع مفتونين بالابتكار في العملات الرقمية والبلوكشين، سواء الطلاب أو المدرسين.  وكان الجمهور مكونًا بشكل أساسي من طلاب علوم الكمبيوتر. وقد تمحورت الأسئلة الرئيسية حول ما هو المال، وكيفية تقييم  العملات الرقمية، وما هي فرص العمل المحتملة للخريجين الجدد في هذا المجال. (...) إن إجراء محادثات في الجامعات أمر هام بالنسبة لي لأنني أعلم أن الجيل القادم من المطورين والمحامين والمحاسبين وغيرهم، الذين سيعملون في هذه الصناعة، يتوقون لمعرفة المزيد عن الفرص المتاحة التي تجلبها هذه الصناعة. كان المعلمون متحمسين جدًا لعرض هذه المواد على طلابهم لأنه ليس من السهل الحصول على مثل هذه المحادثات عالية التقنية للجامعات التي ليست في وسط المدينة. ".
-* [لقاء الديكريد](https://www.eventbrite.com/e/decred-meet-up-tickets-57073786231) في وينيبا، غانا. من تنظيم George Pro@، والذي [أشار قائلا](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$155133397211500yxtpJ:decred.org): “كان أول لقاء لنا في غانا ناجحًا. واستغرقنا وقتنا كي نشرح للمشاركين كيفية تحصيص DCR، وكيفية الحصول عليها (عملية Coinomi) ، واستخدامها كتحويلات مالية، وإعداد المحفظة، والسرعة والخصوصية من بين أمور أخرى.". ([الصور]https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$155133397211500yxtpJ:decred.org))
-* محاضرة في جامعة تشينغداو في تشينغداو، الصين. تحدث [wanbihou@](https://twitter.com/wanbihou) عن نموذج إدارة مجتمع الديكريد والتصويت المقبل على الإجماع.  "كان الطلاب متحمسين للغاية!". ([الصور][photos](https://twitter.com/wanbihou/status/1101131545010556928))
+* [لقاء الديكريد](https://www.eventbrite.com/e/decred-meet-up-tickets-57073786231) في وينيبا، غانا. من تنظيم George Pro@، والذي [أشار قائلا](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$155133397211500yxtpJ:decred.org): “كان أول لقاء لنا في غانا ناجحًا. واستغرقنا وقتنا كي نشرح للمشاركين كيفية تحصيص DCR، وكيفية الحصول عليها (عملية Coinomi) ، واستخدامها كتحويلات مالية، وإعداد المحفظة، والسرعة والخصوصية من بين أمور أخرى.". ([الصور](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$155133397211500yxtpJ:decred.org))
+* محاضرة في جامعة تشينغداو في تشينغداو، الصين. تحدث [wanbihou@](https://twitter.com/wanbihou) عن نموذج إدارة مجتمع الديكريد والتصويت المقبل على الإجماع.  "كان الطلاب متحمسين للغاية!". ([الصور](https://twitter.com/wanbihou/status/1101131545010556928))
 
 الأحداث القادمة:
 
@@ -305,7 +305,7 @@
 
 بدأ Tezos [بالتصويت](https://blog.nomadic-labs.com/athens-proposals-injected.html) على [التعديل](https://blog.nomadic-labs.com/athens-our-proposals-for-the-first-voted-amendment.html) الأول لبروتوكوله في 25 فبراير ([دليل بسيط](https://medium.com/tezos-spotlight/tezos-the-first-amendment-a-laymans-guide-7424ef1d3e13) و[دليل تفصيلي](https://medium.com/tezos/amending-tezos-b77949d97e1e) لعملية التعديل). تحتوي عملية التعديل على 4 مراحل، كل منها تدوم 8 "دورات" (تستغرق الدورة حوالي 3 أيام، لذلك تستمر كل مرحلة لمدة 24 يومًا تقريبًا). في المرحلة الأولى ، يقدم bakers المقترحات ويصوتون عليها. يوجد الآن مقترحان يتم تقييمهما في المرحلة الأولى، كلاهما يزيدان من الحد المسموح به للغاز، لكن أحدهما يقلل أيضًا من "الحد الأدنى لحجم اللفة" (مقدار XTZ المطلوب ليكون baker). من المثير للاهتمام أن نلاحظ أن Kialo يتم [إستخدامه](https://www.kialo.com/tezos-protocol-amendment-1-25295) من قبل بعض أعضاء مجتمع Tezos لمناقشة هذه المقترحات. عندما تنتهي المرحلة الأولى ، سيتقدم الاقتراح الأكثر تأييدًا إلى المرحلة الثانية، حيث يجب الموافقة عليه من قبل %80 على الأقل من bakers. إذا تم استيفاء المعايير، يتبع ذلك مرحلة اختبار يتم فيها إنشاء تفرع التيستنيت مع التغييرات المطبقة وتشغيلها لمدة 48 ساعة (قد يتم تشغيل التيستنيت آخر مطابق للمقترح لبقية هذه المرحلة للسماح بمزيد من الاختبارات) . وبعد مرحلة الاختبار، يصوت bakers على ما إذا كان ينبغي تفعيل التغييرات،  مع توفر الأغلبية العظمى بنسبة %80. بعد هذه المرحلة الرابعة يتم تفعيل التغييرات (أو لا) وتبدأ الدورة مرة أخرى بمقترحات جديدة.
 
-تم [إصدار](https://blog.dash.org/dash-core-v0-13-1-release-5d6e06031ba3) النسخة 0.13.1 ل Dash في 8 فبراير "لتسريع اعتماد Dash Core نسخة 0.13". تم تصميم النسخة 13.1 ل Dash Core لتفعيل [DIP3](https://github.com/dashpay/dips/blob/master/dip-0003.md)، لكن عتبة التفعيل لديه بلغت %80 من كتل الإشارة التي تدعم من المعدنين والعقد الرئيسية في نافذة مدتها 7 أيام قبل بدء التفعيل. وبعد عدم استيفاء هذه المعايير لمدة 24 يوما تقريبا، تقرر أن المعايير صارمة أكثر من اللازم وأن العقد الأساسية للتأشير يمكن إسقاطها. عندما يتبنى عدد كافٍ من المعدنين الجدد إصدار 1.10، سيتم تفعيل التغيير بعد أسبوع واحد (تم [تفعيله]https://blog.dash.org/product-update-february-21-2019-5f067b62df00) في حوالي 26 فبراير). 
+تم [إصدار](https://blog.dash.org/dash-core-v0-13-1-release-5d6e06031ba3) النسخة 0.13.1 ل Dash في 8 فبراير "لتسريع اعتماد Dash Core نسخة 0.13". تم تصميم النسخة 13.1 ل Dash Core لتفعيل [DIP3](https://github.com/dashpay/dips/blob/master/dip-0003.md)، لكن عتبة التفعيل لديه بلغت %80 من كتل الإشارة التي تدعم من المعدنين والعقد الرئيسية في نافذة مدتها 7 أيام قبل بدء التفعيل. وبعد عدم استيفاء هذه المعايير لمدة 24 يوما تقريبا، تقرر أن المعايير صارمة أكثر من اللازم وأن العقد الأساسية للتأشير يمكن إسقاطها. عندما يتبنى عدد كافٍ من المعدنين الجدد إصدار 1.10، سيتم تفعيل التغيير بعد أسبوع واحد (تم [تفعيله](https://blog.dash.org/product-update-february-21-2019-5f067b62df00) في حوالي 26 فبراير). 
 
 عقد بروتوكول 0x لZRX [أول](https://blog.0xproject.com/how-to-participate-in-the-zeip-23-vote-eaa861298033) تصويت لحامل الرمز المميز بين 18-25 فبراير. وكان الهدف من التصويت هو الموافقة على [ZEIP-23](https://blog.0xproject.com/zeip-23-trade-bundles-of-assets-fe69eb3ed960) والتمكين من"تجارة حزم من الأصول". وتمت [الموافقة](https://0x.org/vote) على الاقتراح  بـ %99 من الأصوات بنعم بواسطة 5،061،033 ZRX (أي ما يقارب %0.86 من الإجمالي المتداول).
 
@@ -321,7 +321,7 @@
 
 أظهرت Medium قوتها مرة أخرى [بتعليق](https://archive.today/iKQlv) الحساب الذي [نشر](https://medium.com/@zeroresearchproof/quadrigacx-chain-analysis-report-pt-1-bitcoin-wallets-19d3a375d389) تحليل سلسلة من محافظ QuadrigaCX. لحسن الحظ، قام شخص ما بأخذ صورة. يُخفي التعليق محتوى الحساب بالكامل ويتم تنفيذه كإعادة توجيه إلى الصفحة نفسها التي تظهر "هذه الصفحة غير متوفرة" ولا تذكر السبب.  Medium عبارة عن منصة قوية ، ولكن في جوهرها خدمة مركزية يمكنها تأمين بيانات أولئك الذين لا يقومون بعمل نسخ احتياطية. أثار السلوك السابق مثل هذا [نقاشًا](https://github.com/xaur/decred-issues/issues/70) حول الرحيل من "Medium" أو معاملته على أنه مجرد مرآة.
 
-تم [اكتشاف](https://www.welivesecurity.com/2019/02/08/first-clipper-malware-google-play/) برمجيات خبيثة للأندرويد على متجر جوجل بليا والتي تغير عنوان العملات الرقمية في الحافظة.  دائما تأكد من العنوان  قبل الإرسال.
+تم [اكتشاف](https://www.welivesecurity.com/2019/02/08/first-clipper-malware-google-play/) برمجيات خبيثة للأندرويد على متجر Google Play والتي تغير عنوان العملات الرقمية في الحافظة.  دائما تأكد من العنوان  قبل الإرسال.
 
 ## عن هذا العدد
 
@@ -344,4 +344,3 @@
 - raedah،
 - sambiohazard.
 شكر خاص ل richaredred للمراجعة المكثفة لإدارة فضاء التشفير، ولـ saender للصور الفنية المجردة. 
-
